// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcInlineActions should render properly the item with the download attr 1`] = `
<ec-popover-stub
  level=""
  offset="10"
  placement="bottom-start"
  popoverarrowclass=""
  popoverclass=""
  popoverinnerclass=""
>
   
  <div
    class="ec-inline-actions"
    data-test="ec-inline-actions"
  >
    <ul
      data-test="ec-inline-actions__list"
    >
      <li
        class="ec-inline-actions__item"
        data-test="ec-inline-actions__item ec-inline-actions__item--0-0"
      >
        <a
          class="ec-inline-actions__button"
          data-test="ec-inline-actions__button"
          download="random.jpg"
          href="random"
        >
          <!---->
           
          <span>
            test
          </span>
        </a>
      </li>
    </ul>
     
    <!---->
  </div>
</ec-popover-stub>
`;

exports[`EcInlineActions should render properly when an item was given 1`] = `
<ec-popover-stub
  level=""
  offset="10"
  placement="bottom-start"
  popoverarrowclass=""
  popoverclass=""
  popoverinnerclass=""
>
   
  <div
    class="ec-inline-actions"
    data-test="ec-inline-actions"
  >
    <ul
      data-test="ec-inline-actions__list"
    >
      <li
        class="ec-inline-actions__item"
        data-test="ec-inline-actions__item ec-inline-actions__item--0-0"
      >
        <button
          class="ec-inline-actions__button"
          data-test="ec-inline-actions__button"
        >
          <!---->
           
          <span>
            test
          </span>
        </button>
      </li>
    </ul>
     
    <!---->
  </div>
</ec-popover-stub>
`;

exports[`EcInlineActions should render properly with the anchor when the item have a href 1`] = `
<ec-popover-stub
  level=""
  offset="10"
  placement="bottom-start"
  popoverarrowclass=""
  popoverclass=""
  popoverinnerclass=""
>
   
  <div
    class="ec-inline-actions"
    data-test="ec-inline-actions"
  >
    <ul
      data-test="ec-inline-actions__list"
    >
      <li
        class="ec-inline-actions__item"
        data-test="ec-inline-actions__item ec-inline-actions__item--0-0"
      >
        <a
          class="ec-inline-actions__button"
          data-test="ec-inline-actions__button"
          download=""
          href="random"
        >
          <!---->
           
          <span>
            test
          </span>
        </a>
      </li>
    </ul>
     
    <!---->
  </div>
</ec-popover-stub>
`;

exports[`EcInlineActions should render the item disabled when an item was given disabled 1`] = `
<ec-popover-stub
  level=""
  offset="10"
  placement="bottom-start"
  popoverarrowclass=""
  popoverclass=""
  popoverinnerclass=""
>
   
  <div
    class="ec-inline-actions"
    data-test="ec-inline-actions"
  >
    <ul
      data-test="ec-inline-actions__list"
    >
      <li
        class="ec-inline-actions__item"
        data-test="ec-inline-actions__item ec-inline-actions__item--0-0"
      >
        <button
          class="ec-inline-actions__button ec-inline-actions__button--disabled"
          data-test="ec-inline-actions__button"
          disabled="disabled"
        >
          <!---->
           
          <span>
            test
          </span>
        </button>
      </li>
    </ul>
     
    <!---->
  </div>
</ec-popover-stub>
`;

exports[`EcInlineActions should render the item with an icon when a item was given with an icon 1`] = `
<ec-popover-stub
  level=""
  offset="10"
  placement="bottom-start"
  popoverarrowclass=""
  popoverclass=""
  popoverinnerclass=""
>
   
  <div
    class="ec-inline-actions"
    data-test="ec-inline-actions"
  >
    <ul
      data-test="ec-inline-actions__list"
    >
      <li
        class="ec-inline-actions__item"
        data-test="ec-inline-actions__item ec-inline-actions__item--0-0"
      >
        <button
          class="ec-inline-actions__button"
          data-test="ec-inline-actions__button"
        >
          <ec-icon-stub
            class="ec-inline-actions__icon"
            data-test="ec-inline-actions__icon"
            name="simple-block"
            size="24"
            type="warning"
          />
           
          <span>
            test
          </span>
        </button>
      </li>
    </ul>
     
    <!---->
  </div>
</ec-popover-stub>
`;

exports[`EcInlineActions should render the item with default popover options 1`] = `
<ec-popover-stub
  level=""
  offset="10"
  placement="bottom-start"
  popoverarrowclass=""
  popoverclass=""
  popoverinnerclass=""
>
   
  <div
    class="ec-inline-actions"
    data-test="ec-inline-actions"
  >
    <ul
      data-test="ec-inline-actions__list"
    >
      <li
        class="ec-inline-actions__item"
        data-test="ec-inline-actions__item ec-inline-actions__item--0-0"
      >
        <button
          class="ec-inline-actions__button"
          data-test="ec-inline-actions__button"
        >
          <ec-icon-stub
            class="ec-inline-actions__icon ec-inline-actions__icon--no-type"
            data-test="ec-inline-actions__icon"
            name="simple-block"
            size="24"
          />
           
          <span>
            test
          </span>
        </button>
      </li>
    </ul>
     
    <!---->
  </div>
</ec-popover-stub>
`;

exports[`EcInlineActions should render the item with given popover options 1`] = `
<ec-popover-stub
  level=""
  offset="20"
  placement="top"
  popoverarrowclass=""
  popoverclass=""
  popoverinnerclass=""
>
   
  <div
    class="ec-inline-actions"
    data-test="ec-inline-actions"
  >
    <ul
      data-test="ec-inline-actions__list"
    >
      <li
        class="ec-inline-actions__item"
        data-test="ec-inline-actions__item ec-inline-actions__item--0-0"
      >
        <button
          class="ec-inline-actions__button"
          data-test="ec-inline-actions__button"
        >
          <ec-icon-stub
            class="ec-inline-actions__icon ec-inline-actions__icon--no-type"
            data-test="ec-inline-actions__icon"
            name="simple-block"
            size="24"
          />
           
          <span>
            test
          </span>
        </button>
      </li>
    </ul>
     
    <!---->
  </div>
</ec-popover-stub>
`;

exports[`EcInlineActions should render with one line break when a different arrays was given 1`] = `
<ec-popover-stub
  level=""
  offset="10"
  placement="bottom-start"
  popoverarrowclass=""
  popoverclass=""
  popoverinnerclass=""
>
   
  <div
    class="ec-inline-actions"
    data-test="ec-inline-actions"
  >
    <ul
      data-test="ec-inline-actions__list"
    >
      <li
        class="ec-inline-actions__item"
        data-test="ec-inline-actions__item ec-inline-actions__item--0-0"
      >
        <button
          class="ec-inline-actions__button"
          data-test="ec-inline-actions__button"
        >
          <!---->
           
          <span>
            Reject
          </span>
        </button>
      </li>
    </ul>
     
    <hr
      class="ec-inline-actions__delimiter"
      data-test="ec-inline-actions__delimiter"
    />
    <ul
      data-test="ec-inline-actions__list"
    >
      <li
        class="ec-inline-actions__item"
        data-test="ec-inline-actions__item ec-inline-actions__item--1-0"
      >
        <button
          class="ec-inline-actions__button"
          data-test="ec-inline-actions__button"
        >
          <!---->
           
          <span>
            Cancel
          </span>
        </button>
      </li>
    </ul>
     
    <!---->
  </div>
</ec-popover-stub>
`;

exports[`EcInlineActions should render with tooltip 1`] = `
<ec-popover-stub
  level=""
  offset="10"
  placement="bottom-start"
  popoverarrowclass=""
  popoverclass=""
  popoverinnerclass=""
>
   
  <div
    class="ec-inline-actions"
    data-test="ec-inline-actions"
  >
    <ul
      data-test="ec-inline-actions__list"
    >
      <li
        class="ec-inline-actions__item ec-has-tooltip"
        data-original-title="null"
        data-test="ec-inline-actions__item ec-inline-actions__item--0-0"
      >
        <button
          class="ec-inline-actions__button"
          data-test="ec-inline-actions__button"
        >
          <!---->
           
          <span>
            test
          </span>
        </button>
      </li>
    </ul>
     
    <!---->
  </div>
</ec-popover-stub>
`;
